adjust spacing, fix scroller

--- a/my-portfolio/_sass/_book-page.scss
+++ b/my-portfolio/_sass/_book-page.scss
@@ -81,7 +81,7 @@
 .book-wrapper {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 4rem 1rem;
+  padding-top: 1rem;
 }
 .book-left {
   font-size: 1rem;
